# nogo-poc

./: .gitignore  MODULE.bazel  go.mod  go.sum
analyzers/: BUILD.bazel
analyzers/paralleltest/: BUILD.bazel  paralleltest.go
pkg/: BUILD.bazel  hello_test.go
