module(
    name = "nogo-poc",
    version = "1.0",
)

bazel_dep(
    name = "platforms",
    version = "0.0.10",
)
bazel_dep(
    name = "rules_go",
    version = "0.50.0",
)
bazel_dep(
    name = "gazelle",
    version = "0.38.0",
)

go_sdk = use_extension("@rules_go//go:extensions.bzl", "go_sdk")
go_sdk.download(
    name = "go_sdk",
    version = "1.23.1",
)
use_repo(go_sdk, "go_sdk")
go_sdk.nogo(nogo = "//analyzers:nogo")

register_toolchains("@go_sdk//:all")

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
use_repo(go_deps, "com_github_kunwardeep_paralleltest", "org_golang_x_tools")
